--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,13 +12,15 @@ body {
   font-style: normal;
   margin: 0;
   padding: 0;
+  background: rgba(221, 200, 163, 0.564);
 }
 
 header {
   display: flex;
+  justify-content: center;
+  align-items: center;
   gap: 10px;
-  justify-content: end;
-  background-color: rgba(196, 192, 192, 0.329);
+  background-color: rgb(255, 255, 255);
   width: 100%;
   height: 80px;
 }
@@ -26,22 +28,22 @@ header {
 header a {
   text-decoration: none;
   color: black;
+  margin-right: 10px;
 }
 
 header h1 {
-  margin-right: 580px;
   text-transform: uppercase;
   font-family: "Bitter", serif;
   font-weight: 100;
   font-style: normal;
+  text-align: center;
+  flex-grow: 1;
 }
 
-.job ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+nav {
+  display: flex;
+  gap: 10px;
 }
-
 nav ul li {
   display: inline;
   margin-right: 20px;
@@ -58,6 +60,10 @@ nav a {
   margin: 0 auto;
   padding: 50px 0;
   text-align: center;
+  border: 0px solid #333;
+  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.219);
+  background: white;
+
 }
 
 .contact img {
@@ -67,56 +73,84 @@ nav a {
 }
 
 .carrefour {
-  width: 800px;
-  height: 500px;
+  width: 500px;
+  height: 300px;
   margin: 0 auto;
   padding: 50px 0;
   text-align: center;
   border: 0px solid #333;
   box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.219);
+  background: white;
+}
+
+.carrefour li {
+  margin-top: 10px;
 }
 
 .courir {
-  width: 700px;
-  height: 500px;
+  width: 500px;
+  height: 300px;
   margin: 0 auto;
   padding: 50px 0;
   text-align: center;
   border: 0px solid #333;
   box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.219);
+  background: white;
+}
+.courir li {
+  margin-top: 10px;
 }
 
 .studia {
-  list-style: none;
-  width: 700px;
-  height: 500px;
+  width: 500px;
+  height: 300px;
   margin: 0 auto;
   padding: 50px 0;
   text-align: center;
   border: 0px solid #333;
   box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.219);
+  background: white;
+}
+
+.studia li {
+  margin-top: 10px;
 }
 
 .community {
-  width: 700px;
-  height: 500px;
+  width: 500px;
+  height: 300px;
   margin: 0 auto;
   padding: 50px 0;
   text-align: center;
   border: 0px solid #333;
   box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.219);
-  margin-right: 50px;
+  background: white;
 }
-.exp {
+.community li {
+  margin-top: 10px;
+}
+
+.exp1 {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  gap: 30px;
-  width: 2000px;
-  height: 300px;
-  margin: auto;
-  text-align: center;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin-top: 30px;
 }
+
+.exp1 ul {
+  list-style: none;
+}
+.exp2 {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin-top: 30px;
+}
+
+.exp2 ul {
+  list-style: none;
+}
+
 .info {
   font-family: "Bitter", serif;
   font-weight: 300;
@@ -130,6 +164,11 @@ nav a {
   font-family: "Bitter", serif;
   font-weight: 500;
   font-style: normal;
+  color: white;
+}
+
+.info p{
+  color: white;
 }
 
 .info img {
@@ -156,11 +195,101 @@ p {
   margin: 10px 0;
 }
 
-footer {
-    background-color: black;
-    color: #fff;
-    padding-top: 50px;
-    text-align: center;
+h2 {
+  text-align: center;
+}
+
+.burger {
+  display: none;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+  header {
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  nav {
+    width: 100vw;
+    height: 100vh;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    gap: 50px;
+    padding: 80px;
     position: absolute;
-    width: 100%;
+  }
+
+  nav.active {
+    display: block;
+    right: 0;
+    display: flex;
+    top: 10vh;
+    height: 100vh;
+    z-index: 100;
+    height: 40vh;
+  }
+  .burger {
+    display: block;
+  }
+
+  #nav {
+    flex-direction: column;
+    align-items: end;
+    width: 40%;
+    padding: 20px 0;
+  }
+  #nav.active {
+    display: flex;
+    align-items: flex-end;
+    margin-right: 5px;
+    margin-top: 0px;
+    background-color: gray;
+  }
+}
+
+.school {
+  margin: auto;
+  width: 700px;
+  height: 550px;
+  text-align: center;
+  margin-top: 50px;
+  border: 0px solid #333;
+  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.219);
+  background: white;
+}
+
+.school h3{
+  padding-top: 50px;
+}
+
+#formation{
+  margin-top: 100px;
+  
+}
+
+@media screen and (max-width: 768px) {
+  .school {
+    width: 90%; /* Réduire la largeur sur les écrans plus petits */
+    margin-top: 20px; /* Ajouter un espace en haut */
+    margin-bottom: 20px; /* Ajouter un espace en bas */
+  }
+
+  .school h3 {
+    padding-top: 15px; /* Ajouter un espace en haut de chaque h3 */
+    padding-bottom: 15px; /* Ajouter un espace en bas de chaque h3 */
+    font-size: 18px; /* Ajuster la taille de police pour les petits écrans */
+  }
+}
+
+
+footer{
+  background-color: black;
+color: #000;
+  height: 90px;
+  background: white;
+  text-align: center;
 }
